gcc/testsuite/g++.dg/cpp0x/pr78341.C
// PR c++/78341
// { dg-do compile { target c++11 } }

alignas (alignas double // { dg-error "expected" }
// { dg-error "-:expected" "" { target *-*-* } .+1 }
